logs/mobility/build.make.059.log.stderr
In file included from /home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:34:13: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 int state = FIXING_CAMERA;
             ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp: In member function ‘PickUpResult PickUpController::pickUpSelectedTarget(bool)’:
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:125:36: error: expected ‘;’ before ‘::’ token
 omniTimerStartingTime = ros::Time()::now();//reset the timer again
                                    ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:142:36: error: expected ‘;’ before ‘::’ token
 omniTimerStartingTime = ros::Time()::now();//reset the timer again
                                    ^
make[2]: *** [CMakeFiles/mobility.dir/src/PickUpController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:22:0:
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:34:13: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 int state = FIXING_CAMERA;
             ^
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
